# MVBpp

./: AGENTS.md  CMakeLists.txt  PLAN.md  README.md
bindings/python/: mvbpp_python.cpp
bindings/python/tests/: test_mvbpp.py
bindings/wasm/: CMakeLists.txt  mvbpp_wasm.cpp
bindings/wasm/tests/: ETD49_N87_10uH_5T.json  concentric_basic.json  test_mvbpp.js
include/mvb/: FR4Builder.h  MagneticBuilder.h  MeshableModel.h  TurnBuilder.h
include/mvb/shapes/: ShapeEp.h  ShapeUr.h
src/: BobbinBuilder.cpp  FR4Builder.cpp  MagneticBuilder.cpp  MeshableModel.cpp  SectionBuilder.cpp  SectionDrawing.cpp  StepExporter.cpp  Symmetry.cpp  TurnBuilder.cpp  Utils.cpp
src/shapes/: ShapeEp.cpp  ShapeEr.cpp  ShapeU.cpp  ShapeUr.cpp
tests/: generate_mvbpp_steps.cpp  test_all_gapped.cpp  test_core_shapes.cpp  test_integration.cpp  test_json_integration.cpp  test_mas_battery.cpp  test_meshable.cpp  test_oblong_planar_turn.cpp  test_section_projection.cpp  test_step_comparison.cpp  test_symmetry.cpp  test_toroidal_single_turn_centered.cpp  test_toroidal_topview.cpp
tools/: dump_turns.cpp  mvbpp_section.cpp
